// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with object as option 1`] = `
<div
  data-simplebar="init"
>
  <div
    class="custom-class"
  >
    <div
      class="simplebar-height-auto-observer-wrapper"
    >
      <div
        class="simplebar-height-auto-observer"
      />
    </div>
    <div
      class="simplebar-mask"
    >
      <div
        class="simplebar-offset"
        style="right: 0px; bottom: 0px;"
      >
        <div
          aria-label="scrollable content"
          class="simplebar-content-wrapper"
          role="region"
          style="height: auto; overflow-x: hidden; overflow-y: hidden;"
          tabindex="0"
        >
          <div
            class="simplebar-content"
          >
            <p>
              Some content
            </p>
            <p>
              Some content
            </p>
            <p>
              Some content
            </p>
            <p>
              Some content
            </p>
            <p>
              Some content
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="simplebar-placeholder"
      style="width: 0px; height: 0px;"
    />
  </div>
  <div
    class="simplebar-track simplebar-horizontal"
    style="visibility: hidden;"
  >
    <div
      class="simplebar-scrollbar"
      style="width: 0px; display: none;"
    />
  </div>
  <div
    class="simplebar-track simplebar-vertical"
    style="visibility: hidden;"
  >
    <div
      class="simplebar-scrollbar"
      style="height: 0px; display: none;"
    />
  </div>
</div>
`;

exports[`renders with options 1`] = `
<div
  class="simplebar-scrollable-y"
  data-simplebar="init"
>
  <div
    class="simplebar-wrapper"
  >
    <div
      class="simplebar-height-auto-observer-wrapper"
    >
      <div
        class="simplebar-height-auto-observer"
      />
    </div>
    <div
      class="simplebar-mask"
    >
      <div
        class="simplebar-offset"
        style="right: -0px; bottom: 0px;"
      >
        <div
          aria-label="scrollable content"
          class="simplebar-content-wrapper"
          role="region"
          style="height: auto; overflow-x: hidden; overflow-y: scroll;"
          tabindex="0"
        >
          <div
            class="simplebar-content"
          >
            <p>
              Some content
            </p>
            <p>
              Some content
            </p>
            <p>
              Some content
            </p>
            <p>
              Some content
            </p>
            <p>
              Some content
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="simplebar-placeholder"
      style="width: 0px; height: 0px;"
    />
  </div>
  <div
    class="simplebar-track simplebar-horizontal"
    style="visibility: hidden;"
  >
    <div
      class="simplebar-scrollbar"
      style="width: 0px; display: none;"
    />
  </div>
  <div
    class="simplebar-track simplebar-vertical"
    style="visibility: visible;"
  >
    <div
      class="simplebar-scrollbar"
      style="height: 0px; display: none;"
    />
  </div>
</div>
`;

exports[`renders without crashing 1`] = `
<div>
  <div
    data-simplebar="init"
  >
    <div
      class="simplebar-wrapper"
    >
      <div
        class="simplebar-height-auto-observer-wrapper"
      >
        <div
          class="simplebar-height-auto-observer"
        />
      </div>
      <div
        class="simplebar-mask"
      >
        <div
          class="simplebar-offset"
          style="right: 0px; bottom: 0px;"
        >
          <div
            aria-label="scrollable content"
            class="simplebar-content-wrapper"
            role="region"
            style="height: auto; overflow-x: hidden; overflow-y: hidden;"
            tabindex="0"
          >
            <div
              class="simplebar-content"
            >
              <p>
                Some content
              </p>
              <p>
                Some content
              </p>
              <p>
                Some content
              </p>
              <p>
                Some content
              </p>
              <p>
                Some content
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="simplebar-placeholder"
        style="width: 0px; height: 0px;"
      />
    </div>
    <div
      class="simplebar-track simplebar-horizontal"
      style="visibility: hidden;"
    >
      <div
        class="simplebar-scrollbar"
        style="width: 0px; display: none;"
      />
    </div>
    <div
      class="simplebar-track simplebar-vertical"
      style="visibility: hidden;"
    >
      <div
        class="simplebar-scrollbar"
        style="height: 0px; display: none;"
      />
    </div>
  </div>
</div>
`;
